--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,7 +6,11 @@
     <title>@ViewData["Title"] - BoolFlix</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/csharp-boolflix.styles.css" asp-append-version="true"/>
+    
+    <link rel="stylesheet" href="~/css/general.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/Header.css" asp-append-version="true"/>
+    
+    <link rel="stylesheet" href="~/csharp-boolflix.styles.css" />
 </head>
 
 <body>
