--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,6 +2,6 @@
     ViewData["Title"] = "Homepage";
 }
 
-<div class="text-center">
+<div class="text-center text-white">
     <h1 class="display-4">Welcome</h1>
 </div>
