--- a/Views/Shared/Partials/_Footer.cshtml
+++ b/Views/Shared/Partials/_Footer.cshtml
@@ -1,3 +1,4 @@
-﻿<div class="container-fluid">
-    &copy; 2022 - BoolFlix - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+﻿<div class="footer_personal container-fluid">
+   <span>&copy; 2022 - BoolFlix</span>
+   <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 </div>
