--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     
     <link rel="stylesheet" href="~/css/general.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/Header.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/Footer.css" asp-append-version="true"/>
     
     <link rel="stylesheet" href="~/csharp-boolflix.styles.css" />
 </head>
