--- a/Styles/Header.scss
+++ b/Styles/Header.scss
@@ -24,6 +24,12 @@
         box-shadow: $logo-primary-color 0 0 0 0.25rem;
     }
 
+    a {
+        color: $title-primary-color;
+        text-decoration: none;
+        margin: 0 5px 0 5px;
+    }
+
     .hamburger_icon{
         color: $logo-primary-color;
     }
