--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,20 @@
 ﻿@{
     ViewData["Title"] = "Homepage";
+    string name = "Luca";
 }
 
-<div class="text-center text-white">
-    <h1 class="display-4">Welcome</h1>
+<div class="text-left text-white d-flex flex-column justify-content-between">
+    <h3 class="">Ciao, @name</h3>
+    
+    @* BLOCCO FILM *@
+    <div>
+        <h5 class="">FILM</h5>
+        
+    </div>
+    
+    @* BLOCCO SERIE TV *@
+    <div>
+        <h5 class="">SERIE TV</h5>
+    </div>
+    
 </div>
