--- a/wwwroot/css/Header.css
+++ b/wwwroot/css/Header.css
@@ -23,6 +23,11 @@ body {
   outline: 0;
   box-shadow: #db1f2c 0 0 0 0.25rem;
 }
+.navbar_personal a {
+  color: #db1f2c;
+  text-decoration: none;
+  margin: 0 5px 0 5px;
+}
 .navbar_personal .hamburger_icon {
   color: #db1f2c;
 }
