--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,18 +3,60 @@
     string name = "Luca";
 }
 
+@model List<Genre>;
+
 <div class="text-left text-white d-flex flex-column justify-content-between">
-    <h3 class="">Ciao, @name</h3>
     
-    @* BLOCCO FILM *@
-    <div>
-        <h5 class="">FILM</h5>
-        
+    <div class="top">
+    	<div class="columns">
+    		<div class="column is-full featured_wrapper p-0">
+    			<img src="img/hero.jpeg" class="featured">
+    			<div class="title_wrapper">
+    				<span class="has-text-white">Trending Today</span>
+    				<h1 class="title is-1 has-text-white">Black Panther: Wakanda Forever</h1>
+    				<button class="button is-medium">Guarda Ora</button>
+    			</div>
+    		</div>
+    	</div>
     </div>
     
-    @* BLOCCO SERIE TV *@
-    <div>
-        <h5 class="">SERIE TV</h5>
-    </div>
+	<div class="container mt-3">
+		<h3 class="">Ciao, @name</h3>
+		
+		@if (Model.Count !=0 )
+		{
+			<div class="container">
+				<div class="columns is-multiline p-0 pt-6 last">
+					<div class="column is-full">
+						<p class="has-text-white">Generi</p>
+					</div>
+					
+					<div class="row">
+						
+					@foreach (Genre genre in @Model)
+					{
+						<div class="col column is-one-quarter d-flex flex-column align-items-center">
+							<img style="width: 350px" src="@genre.ImgUrl">
+							
+							<span>@genre.Name</span>
+						</div>         
+					}
+					</div>
+				</div>
+			</div>
+		}
+		
+		@* BLOCCO FILM *@
+            <div>
+                <h5 class="">FILM</h5>
+                
+            </div>
+            
+            @* BLOCCO SERIE TV *@
+            <div>
+                <h5 class="">SERIE TV</h5>
+            </div>
+	</div>
+	
     
 </div>
