--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,8 +26,8 @@
     <header>
         @Html.Partial("../Shared/Partials/_Header")
     </header>
-    <div class="container-fluid">
-        <main role="main" class="py-3">
+    <div class="container-fluid px-0">
+        <main role="main" class="">
             @RenderBody()
         </main>
     </div>
